Fix: the font-weight is too light to readable

--- a/app/templates/selectbox/selectbox.css
+++ b/app/templates/selectbox/selectbox.css
@@ -29,7 +29,7 @@ select {
   background: #fff;
   background-image: none;
   font-size: 1em;
-  font-weight: 200;
+  font-weight: 300;
   margin: 0;
   color: #0094fb;
   cursor: pointer;
